# tgnews

./: .gitignore  LICENSE  README.md  deb-packages.txt  pymodules.sh
cxx/: .gitignore  CMakeLists.txt
cxx/.clangd/index/: PyServer.cpp.1184540CD38FD75A.idx  PyServer.h.93EFB67EA607B807.idx  address.cpp.061FFAB6253C358B.idx  address.h.66A5F027563CA88C.idx  basic_include.h.19CFD6A670827315.idx  code_sequence.cpp.4D8106429B119CAD.idx  code_sequence.h.0ADA5909D6050398.idx  const.cpp.21FDE5C0A535242D.idx  detect.cpp.D1E4295F76D747E3.idx  detect.h.B8B83B7AF7BFC3FD.idx  gtest-all.cc.EA4B3D350BCD653B.idx  gtest.h.D19147778A528512.idx  gtest_main.cc.0238D18F4B9F5CAB.idx  handler.h.54BC895E864DAF8F.idx  io_api.cpp.C9ED363C64351D43.idx  io_api.h.424E39F746DAB40C.idx  ipv4_error.h.E70A820829B1ED01.idx  json.h.93E0BA6C1AD5379F.idx  langdetect.cpp.513A4A23793B3422.idx  langdetect.h.2DE89351CD82756F.idx  langdetect_c.h.E7D5AB339CADDADB.idx  language.cpp.06DA71D0BE7A2D13.idx  list_files.cpp.0C0B86E517131085.idx  main.cpp.CFE98AE3C4B6936F.idx  name_daemon.cpp.CE0EB5C501DE1CCC.idx  name_daemon.h.3540A04985E016A8.idx  ngram_storage.cpp.F61FD67BDD75CB38.idx  ngram_storage.h.DA33D00295E7A226.idx  normalizer.cpp.4F7E3D53C1FF4E18.idx  normalizer.h.613A731E55863D72.idx  parser.cpp.879A6E099A3482C9.idx  parser.h.8FF9563D806A3506.idx  parser.h.B4A539B238C7D4AA.idx  poll.cpp.2B5B1D2BE814EDCD.idx  poll.h.56821DA0411AF68F.idx  request.cpp.03F1AC4F0C31EE35.idx  request.h.D440CC4528850FFC.idx  server.cpp.5E6A0DBE861CD112.idx  server.h.6D342FEE8A8F682D.idx  socket.cpp.9AA69AFEFF03C3E2.idx  (+15 more)
cxx/html/: CMakeLists.txt  parser.h  test_html.cpp
cxx/http/: CMakeLists.txt  parser.cpp  parser.h  request.cpp  request.h  test_http.cpp
cxx/json/: CMakeLists.txt  json.cpp  json.h  test_json.cpp
cxx/language/src/: CMakeLists.txt  detect.cpp  detect.h  language.cpp
cxx/language/src/lang_detect/: code_sequence.cpp  code_sequence.h  langdetect.cpp  langdetect.h  langdetect_c.h  ngram_storage.cpp  ngram_storage.h  normalizer.cpp  normalizer.h  unicode_data.cpp  unicode_data.h
cxx/name_daemon/: name_daemon.cpp  name_daemon.h
cxx/net/: address.cpp  address.h  basic_include.h  handler.h  io_api.cpp  io_api.h  ipv4_error.h  poll.cpp  poll.h  socket.cpp  socket.h  storage.h  timer.cpp  timer.h  unique_fd.h
cxx/server/src/: CMakeLists.txt  PyServer.cpp  PyServer.h  main.cpp  server.cpp  server.h  storage.h
cxx/server/src/http/: parser.h  request.h
cxx/server/src/net/: socket.h  storage.h
cxx/sysapi/: sysapi.cpp  sysapi.h  thread_pool.h
cxx/tgnews/src/: CMakeLists.txt  tgnews.cpp
cxx/walker/src/: CMakeLists.txt  list_files.cpp  main.cpp  walker.cpp  walker.h
python/: .gitignore  executors.py  nets.py  neural.py  news_net.py  rank.py  tgutil.py  utility.py  watch.py
python/assets/: pagerank.txt
python/assets/classifier/ru/: model.pickle  vectorizer.pickle
python/assets/news/en/: model.pickle  test.csv
python/assets/news/en_class/: vectorizer.pickle
python/assets/news/ru/: model.pickle  test.csv  vectorizer.pickle
python/assets/news/ru_class/: vectorizer.pickle
python/assets/ru/: model.pickle
scripts/: 4011238084351119989.html  4015610181293386370.html  4015610182338591312.html  401654939563582840.html  4017571649573793566.html  402892143288607563.html  402892143407706382.html  402892143890733680.html  402892143950957655.html  402892144404251931.html  402892144565666018.html  402892144603849820.html  402892145148790274.html  4032480120902045148.html  4042890082496547000.html  4042890083959205452.html  406839772136708188.html  406839772141759164.html  406839772261072601.html  406839772358168160.html  406839772477522386.html  406839772522003635.html  406839772600011141.html  406839772665849259.html  406839772685116860.html  406839772783213935.html  406839772790141358.html  406839772809147272.html  406839772810341429.html  406839772819799505.html  406839772940564169.html  406839772946003849.html  406839772959905605.html  406839772961635439.html  406839772969820899.html  406839772978139387.html  406839773023406106.html  406839773078574794.html  406839773099444343.html  406839773179772776.html  (+460 more)
server/: .gitignore  CMakeLists.txt
server/src/: CMakeLists.txt
server/src/net/: address.cpp  io_api.cpp  io_api.h  poll.h  socket.cpp  timer.cpp  timer.h
